# MassConfigMerger

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  PERFORMANCE.md  QUICKSTART.md  README.md  TESTING_CHECKLIST.md  about.html  aggregator_tool.py  alembic.ini  channels.txt  clash_utils.py  config.json  config.json.example  config.yaml  config.yaml.example  constants.py  dev-requirements.txt  diagnose.sh  docker-compose.yml  health_check.py  index.html  package-lock.json  package.json  ping100_mokhaberat_7_3_2025_vpn_report.json  prometheus.yml  proxies.html  proxy_history.db  pyproject.toml  pytest.ini  requirements.txt  run_tests.sh  sitecustomize.py  sources.failures.json  (+9 more)
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  daily_update.yml  deploy-pages.yml  generate-configs.yml  merge.yml  release.yml
_includes/: footer.html  header.html
advanced_methods/: ADVANCED.md  README_advanced.md  __init__.py  argo_merger.py  http_injector_merger.py  tunnel_bridge_merger.py
assets/css/: error-handler.css  fonts.css  header-animation.css  loading.css  state-manager.css  style.css
assets/js/: cache-config.js  cache-manager.js  error-handler.js  loading-controller.js  main.js  proxies.js  state-manager.js  statistics.js  utils.js
data/: current_results.json  history.db  history.jsonl
docs/: _config.yml  advanced-troubleshooting.md  api.html  architecture.md  configuration.md  docs.html  getting-started.md  index.html  index.md  protocol-deep-dive.md  quickstart.html  roadmap.html  tutorial.md  web-interface.md
docs/api/: configstream.html  index.html  massconfigmerger.html  search.js
docs/api/configstream/: clash_utils.html  cli.html  cli_args.html  commands.html  config.html  constants.html  core.html  db.html  format_converters_extra.html  gist_uploader.html  output_writer.html  pipeline.html  report_generator.html  source_operations.html  telegram_scraper.html  tester.html  vpn_merger.html  vpn_retester.html  web.html
docs/api/massconfigmerger/: clash_utils.html  cli.html  cli_args.html  commands.html  config.html  constants.html  core.html  db.html  format_converters_extra.html  gist_uploader.html  output_writer.html  pipeline.html  report_generator.html  source_operations.html  telegram_scraper.html  tester.html  vpn_merger.html  vpn_retester.html  web.html
docs/css/: docs.css  style.css
docs/js/: docs.js  main.js
examples/plugins/: wireguard_parser.py
helm/configstream/: Chart.yaml  values.yaml
helm/configstream/templates/: deployment.yaml
jules-scratch/: run_merge.py
jules-scratch/verification/: verify_animations.py  verify_changes.py  verify_dashboard.py  verify_dashboard_page.py  verify_final_fixes.py  verify_frontend.py  verify_landing_page.py  verify_mobile_nav.py  verify_preloader_fix.py  verify_redesign.py  verify_redesign_pass_2.py  verify_testing_page.py  verify_ui.py  verify_web.py
k8s/: configmap.yaml  deployment.yaml  pvc.yaml  service.yaml
massconfigmerger/: __init__.py  aggregator_tool.py  vpn_merger.py  vpn_retester.py
migrations/: env.py
migrations/versions/: 52c8181e7bbb_initial_migration.py
output/: clash.yaml  configs_raw.txt  metadata.json  proxies.json  report.csv  statistics.json  stats.json  vpn_subscription_base64.txt
output/full/: all.json
scripts/: build.py  setup_daemon.sh  verify_conversion.sh  verify_web.py
src/configstream/: __init__.py  aggregator_tool.py  api.py  benchmarks.py  clash_utils.py  cli.py  cli_args.py  commands.py  config.py  constants.py  core.py  daemon.py  db.py  di.py  events.py  exceptions.py  fetcher.py  format_converters_extra.py  generator.py  geoip.py  gist_uploader.py  logging_config.py  main_daemon.py  metrics.py  models.py  output.py  output_writer.py  parsers.py  pipeline.py  proxy_service.py  py.typed  report_generator.py  repositories.py  scheduler.py  services.py  telegram_scraper.py  tester.py  testers.py  testing.py  tui.py  (+5 more)
src/configstream.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/configstream/core/: __init__.py  config_normalizer.py  config_processor.py  types.py  (+6 more)
src/massconfigmerger/: __init__.py  advanced_converters.py  aggregator_tool.py  clash_utils.py  cli.py  cli_args.py  commands.py  config.py  constants.py  db.py  exceptions.py  gist_uploader.py  metrics.py  output_writer.py  pipeline.py  py.typed  report_generator.py  result_processor.py  services.py  source_fetcher.py  source_operations.py  telegram_scraper.py  tester.py  utils.py  vpn_merger.py  vpn_retester.py  web.py
src/massconfigmerger.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stubs/telethon/: __init__.pyi  errors.pyi  events.pyi
tests/: conftest.py  test_advanced_converters.py  test_advanced_converters_edge.py  test_advanced_filtering.py  test_aggregation_merging.py  test_aggregator_clash_proxy.py  test_aggregator_patterns.py  test_aggregator_tool.py  test_api.py  test_api_extra.py  test_async_fetcher_lock.py  test_async_source_fetcher.py  test_bandwidth_tester.py  test_blocklist_checker.py  test_categorize_protocol.py  test_cert_validator.py  test_check_sources.py  test_clash_parsing_extra.py  test_clash_proxies_yaml.py  test_clash_utils.py  test_clash_utils_import.py  test_cli.py  test_cli_country_flags.py  test_cli_extended.py  test_cli_main.py  test_commands.py  test_commands_coverage.py  test_common_parser.py  test_config.py  test_config_coverage.py  test_config_load.py  test_config_normalizer.py  test_config_normalizer_coverage_final.py  test_config_normalizer_extra.py  test_config_normalizer_final.py  test_config_processor_coverage.py  test_config_processor_coverage_extra.py  test_config_processor_coverage_final.py  test_config_processor_coverage_more.py  test_config_processor_extra.py  (+100 more)
tests/core/: test_config_processor.py
tests/db/: test_historical_manager.py
tests/metrics/: test_prometheus_exporter.py
tests/plugins/: test_base.py  test_manager.py
tests/security/: test_cert_validator.py  test_ip_reputation.py
(+138 files in other folders)
