[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "configstream"
version = "1.0.0"
description = "VPN configuration aggregator and merger"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0"}
authors = [
    {name = "Amirreza 'Farnam' Taheri", email = "taherifarnam@gmail.com"}
]
keywords = ["vpn", "v2ray", "clash", "proxy", "configuration", "aggregator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp",
    "aiodns",
    "nest-asyncio",
    "telethon",
    "PyYAML",
    "geoip2",
    "pydantic>=2",
    "pydantic-settings",
    "rich",
    "click",
    "aiohttp-proxy",
    "singbox2proxy~=0.2.0",
    "requests",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pyfakefs",
    "types-PyYAML",
    "types-requests",
    "flake8",
    "mypy",
    "pre-commit",
    "pip-audit",
]

[project.urls]
Homepage = "https://amirrezafarnamtaheri.github.io/ConfigStream/"
Repository = "https://github.com/AmirrezaFarnamTaheri/ConfigStream"
Issues = "https://github.com/AmirrezaFarnamTaheri/ConfigStream/issues"

[project.scripts]
configstream = "configstream.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=configstream",
    "--cov-report=term-missing",
]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "aiohttp_proxy",
    "singbox2proxy"
]
ignore_missing_imports = true
